Greg main - replaces  Support for R2DBC connections in DataSource processor. #262  (#272)
* Support for R2DBC connections in DataSource processor.

* Cleaning up some formatting.

* Resolved style formatting issues.

* Remove Greg MariadDB code
* it's now handled directly in MySqlJdbcUrlCreator

---------

Co-authored-by: meyerg <meyerg@vmware.com>