@@ -15,10 +15,11 @@
  */
 package io.pivotal.cfenv.spring.boot;
 
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.cloud.CloudPlatform;
@@ -38,6 +39,7 @@ import io.pivotal.cfenv.jdbc.CfJdbcService;
 /**
  * @author Mark Pollack
  * @author David Turanski
+ * @author Greg Meyer
  */
 public class CfDataSourceEnvironmentPostProcessor implements CfServiceEnablingEnvironmentPostProcessor,
 		Ordered, ApplicationListener<ApplicationEvent> {
@@ -72,7 +74,7 @@ public class CfDataSourceEnvironmentPostProcessor implements CfServiceEnablingEn
 
 				List<CfJdbcService> jdbcServices = cfJdbcEnv.findJdbcServices().stream()
 						.filter(service -> this.isEnabled(service, environment))
-						.collect(Collectors.toList());
+						.toList();
 
 				if (jdbcServices.size() > 1) {
 					if (invocationCount == 1) {
@@ -94,6 +96,36 @@ public class CfDataSourceEnvironmentPostProcessor implements CfServiceEnablingEn
 				Object driverClassName = cfJdbcService.getDriverClassName();
 				if (driverClassName != null) {
 					properties.put("spring.datasource.driver-class-name", driverClassName);
+				}
+
+				/* R2DBC processing
+				 * Split query param options and URL into two string
+				 * and move options to spring.r2dbc.properties.<option>
+				 */
+
+				String[] splitJDBCUrl = cfJdbcService.getJdbcUrl().split("\\?");
+
+				String r2dbcUrl = splitJDBCUrl[0].replaceFirst("jdbc:", "r2dbc:");
+
+				properties.put("spring.r2dbc.url", r2dbcUrl);
+				properties.put("spring.r2dbc.username", cfJdbcService.getUsername());
+				properties.put("spring.r2dbc.password", cfJdbcService.getPassword());
+
+				if (splitJDBCUrl.length == 2) {
+					Map<String, String> queryOptions = parseQueryString(splitJDBCUrl[1]);
+
+					if (queryOptions.size() > 0) {
+						queryOptions.forEach((key, value) -> {
+
+							switch (key) {
+								case "enabledTLSProtocols":
+									properties.put("spring.r2dbc.properties.tlsVersion", value);
+									break;
+								default:
+									properties.put(String.format("spring.r2dbc.properties.%s", key), value);
+							}
+						});
+					}
 				}
 
 				MutablePropertySources propertySources = environment.getPropertySources();
@@ -120,6 +152,27 @@ public class CfDataSourceEnvironmentPostProcessor implements CfServiceEnablingEn
 		}
 	}
 
+	private Map<String, String> parseQueryString(String queryParams) {
+		
+		if (queryParams == null || queryParams.equals(""))
+			return Collections.emptyMap(); 
+		
+		Map<String, String> retVal = new HashMap<>();
+		
+		String[] options = queryParams.split("&");
+		for (String option : options) {
+			
+			String[] keyValue = option.split("=");
+			if (keyValue.length != 2 || keyValue[0].length() == 0 || keyValue[1].length() == 0) {
+				continue;
+			}
+            
+ 			retVal.put(keyValue[0], keyValue[1]);
+		}
+		
+		return retVal;
+	}
+	
 	@Override
 	public void onApplicationEvent(ApplicationEvent event) {
 		if (event instanceof ApplicationPreparedEvent) {
